cyfe.com (archived on 2017-08-03)
{
  "alexa_rank": 64797,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7674,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.63,
  "homepage_snapshot_redirected_domain": "cyfe.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930041917id_/https://www.cyfe.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930041917id_/http%3A//cyfe.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cyfe.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170803111815id_/https%3A//www.cyfe.com/privacy",
  "policy_title": "Privacy Policy | Cyfe",
  "policy_url": "cyfe.com/privacy",
  "sha1": "55834c1c7ab400e412805b38fef6daf999c4663a",
  "simhash": 590049072473018708,
  "simhash_updated": false,
  "site_hostname": "cyfe.com",
  "site_url": "http://cyfe.com",
  "smog": 15.43,
  "strict_updated": false,
  "timestamp": "20170803111815",
  "word_count": 1199,
  "year": 2017
}

--- a/c/cy/cyf/cyfe.com.html
+++ b/c/cy/cyf/cyfe.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cyfe.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606103802id_/http%3A//www.cyfe.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cyfe.com privacy policy that was archived on 2017-08-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170803111815id_/https%3A//www.cyfe.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <title>Privacy Policy | Cyfe</title>
@@ -129,7 +129,7 @@ library_tolerance=2500,
 use_existing_jquery=false,
 // DO NOT EDIT BELOW THIS LINE
 f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=252179&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20170606103802id_%2Fhttp%253A%2F%2Fwww.cyfe.com%2Fprivacy&amp;r=0.38890035053037364" type="text/javascript"></script>
+</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=252179&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20170803111815id_%2Fhttps%253A%2F%2Fwww.cyfe.com%2Fprivacy&amp;r=0.36826812895563577" type="text/javascript"></script>
 <!-- End Visual Website Optimizer Asynchronous Code -->
 </head>
 <body class="sub">
@@ -285,4 +285,4 @@ var google_remarketing_only = true;
 <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1014629720/?value=0&amp;label=7KN3CJiT9QMQ2Iro4wM&amp;guid=ON&amp;script=0"/>
 </div>
 </noscript>
-<div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" role="dialog" tabindex="-1" style="display: none;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><button type="button" id="cboxPrevious"></button><button type="button" id="cboxNext"></button><button id="cboxSlideshow"></button><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div><button type="button" id="cboxClose"></button></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div></body></html>
+</body></html>
