--- a/a/ar/arc/arcadescool.com.html
+++ b/a/ar/arc/arcadescool.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arcadescool.com privacy policy that was archived on 2017-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605125623id_/http%3A//www.arcadescool.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arcadescool.com privacy policy that was archived on 2017-08-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170805094250id_/http%3A//www.arcadescool.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -157,23 +157,23 @@
 <div class="clear"></div>
 <div class="ad1000">
 <div style="margin:0 8px;"><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/beach-racers-3d" target="_blank" rel="bookmark" title="Beach Racers 3D"><img src="http://ArcadesCool.com/img/beach-racers3d.jpg" alt="Beach Racers 3D"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/beach-racers-3d" target="_blank" title="Beach Racers 3D">Beach Racers 3D</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/fast-car-frenzy" target="_blank" rel="bookmark" title="Fast Car Frenzy"><img src="http://ArcadesCool.com/img/fastcar-frenzy.jpg" alt="Fast Car Frenzy"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/fast-car-frenzy" target="_blank" title="Fast Car Frenzy">Fast Car Frenzy</a>
 </div><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/hulk-bad-altitude" target="_blank" rel="bookmark" title="Hulk Bad Altitude"><img src="http://arcadescool.com/img/hulk-bad-altitude.jpg" alt="Hulk Bad Altitude"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/hulk-bad-altitude" target="_blank" title="Hulk Bad Altitude">Hulk Bad Altitu...</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/escape" target="_blank" rel="bookmark" title="Escape"><img src="http://arcadescool.com/img/escape.jpg" alt="Escape"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/escape" target="_blank" title="Escape">Escape</a>
 </div><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/rvpm-racing" target="_blank" rel="bookmark" title="RVPM Racing"><img src="http://ArcadesCool.com/img/rvpm-racing.jpg" alt="RVPM Racing"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/rvpm-racing" target="_blank" title="RVPM Racing">RVPM Racing</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/speed-demon-bmx-racing" target="_blank" rel="bookmark" title="Speed Demon Bmx Racing"><img src="http://ArcadesCool.com/img/Speed-Demon-Bmx-Racing.jpg" alt="Speed Demon Bmx Racing"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/speed-demon-bmx-racing" target="_blank" title="Speed Demon Bmx Racing">Speed Demon Bmx...</a>
 </div><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/stunt-bike-island" target="_blank" rel="bookmark" title="Stunt Bike Island"><img src="http://ArcadesCool.com/img/Stunt-Bike-Island.jpg" alt="Stunt Bike Island"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/stunt-bike-island" target="_blank" title="Stunt Bike Island">Stunt Bike Isla...</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/atv-tag-race" target="_blank" rel="bookmark" title="Atv Tag Race"><img src="http://ArcadesCool.com/img/atvtagrace.jpg" alt="Atv Tag Race"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/atv-tag-race" target="_blank" title="Atv Tag Race">Atv Tag Race</a>
 </div><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/desire-to-fall" target="_blank" rel="bookmark" title="Desire To Fall"><img src="http://arcadescool.com/img/Desire-to-fall180x135.jpg" alt="Desire To Fall"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/desire-to-fall" target="_blank" title="Desire To Fall">Desire To Fall</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/car-eats-car-2" target="_blank" rel="bookmark" title="Car Eats Car 2"><img src="http://www.arcadescool.com/img/car-eats-car-2.jpg" alt="Car Eats Car 2"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/car-eats-car-2" target="_blank" title="Car Eats Car 2">Car Eats Car 2</a>
 </div><div class="item" onmouseover="this.className='item2'" onmouseout="this.className='item'">
- <p><a onclick="sun();" href="http://www.arcadescool.com/games/jet-ski-rush" target="_blank" rel="bookmark" title="Jet Ski Rush"><img src="http://ArcadesCool.com/img/jet_ski_rush.jpg" alt="Jet Ski Rush"></a></p>
-  <a onclick="sun();" href="http://www.arcadescool.com/games/jet-ski-rush" target="_blank" title="Jet Ski Rush">Jet Ski Rush</a>
+ <p><a onclick="sun();" href="http://www.arcadescool.com/games/rally-point-2" target="_blank" rel="bookmark" title="Rally Point 2"><img src="http://arcadescool.com/img/rally-point-2(1).jpg" alt="Rally Point 2"></a></p>
+  <a onclick="sun();" href="http://www.arcadescool.com/games/rally-point-2" target="_blank" title="Rally Point 2">Rally Point 2</a>
 </div><div class="clear"></div>
 </div>
 
@@ -250,28 +250,28 @@ CPMStar</p>
 
 <div class="ad1601">
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/3d-buggy-racing" rel="bookmark" title="3D Buggy Racing"><img src="http://arcadescool.com/img/3D-Buggy-Racing.jpg" alt="3D Buggy Racing"></a></p>
-  <a href="3D Buggy Racing" title="3D Buggy Racing">3D Buggy Racing</a>
+ <p><a href="http://www.arcadescool.com/games/mafia-driver-3" rel="bookmark" title="Mafia Driver 3"><img src="http://ArcadesCool.com/img/mafia-driver-3.jpg" alt="Mafia Driver 3"></a></p>
+  <a href="Mafia Driver 3" title="Mafia Driver 3">Mafia Driver 3</a>
 </div>
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/police-station-parking" rel="bookmark" title="Police Station Parking"><img src="http://www.arcadescool.com/img/Police-Station-Parking.jpg" alt="Police Station Parking"></a></p>
-  <a href="Police Station Parking" title="Police Station Parking">Police Station ...</a>
+ <p><a href="http://www.arcadescool.com/games/driving-school-gt" rel="bookmark" title="Driving School GT"><img src="http://ArcadesCool.com/img/Driving-School-GT.jpg" alt="Driving School GT"></a></p>
+  <a href="Driving School GT" title="Driving School GT">Driving School ...</a>
 </div>
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/4-wheel-fury-2" rel="bookmark" title="4 wheel Fury 2"><img src="http://ArcadesCool.com/img/4-wheel-fury-2.jpg" alt="4 wheel Fury 2"></a></p>
-  <a href="4 wheel Fury 2" title="4 wheel Fury 2">4 wheel Fury 2</a>
+ <p><a href="http://www.arcadescool.com/games/spongebob-ship-o-ghouls" rel="bookmark" title="Spongebob Ship O Ghouls"><img src="http://arcadescool.com/img/shipoghouls.jpg" alt="Spongebob Ship O Ghouls"></a></p>
+  <a href="Spongebob Ship O Ghouls" title="Spongebob Ship O Ghouls">Spongebob Ship ...</a>
 </div>
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/kolobok" rel="bookmark" title="Kolobok"><img src="http://www.arcadescool.com/img/kolobok.jpg" alt="Kolobok"></a></p>
-  <a href="Kolobok" title="Kolobok">Kolobok</a>
+ <p><a href="http://www.arcadescool.com/games/zip-zap-street-rally" rel="bookmark" title="Zip Zap Street Rally"><img src="http://ArcadesCool.com/img/zip-zap-street-rally.jpg" alt="Zip Zap Street Rally"></a></p>
+  <a href="Zip Zap Street Rally" title="Zip Zap Street Rally">Zip Zap Street ...</a>
 </div>
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/offroad-4x4" rel="bookmark" title="Offroad 4×4"><img src="http://ArcadesCool.com/img/offroad-4x4.gif" alt="Offroad 4×4"></a></p>
-  <a href="Offroad 4×4" title="Offroad 4×4">Offroad 4×...</a>
+ <p><a href="http://www.arcadescool.com/games/rich-cars-3-hustle" rel="bookmark" title="Rich Cars 3 Hustle"><img src="http://www.arcadescool.com/img/rich-cars-3.jpg" alt="Rich Cars 3 Hustle"></a></p>
+  <a href="Rich Cars 3 Hustle" title="Rich Cars 3 Hustle">Rich Cars 3 Hus...</a>
 </div>
 <div class="sitem" onmouseover="this.className='sitem2'" onmouseout="this.className='sitem'">
- <p><a href="http://www.arcadescool.com/games/ferrari-xv" rel="bookmark" title="Ferrari XV"><img src="http://www.ArcadesCool.com/img/ferrari-xv(3).jpg" alt="Ferrari XV"></a></p>
-  <a href="Ferrari XV" title="Ferrari XV">Ferrari XV</a>
+ <p><a href="http://www.arcadescool.com/games/run-bolt-run" rel="bookmark" title="Run Bolt Run"><img src="http://arcadescool.com/img/run-bolt-run.jpg" alt="Run Bolt Run"></a></p>
+  <a href="Run Bolt Run" title="Run Bolt Run">Run Bolt Run</a>
 </div>
 <div class="clear"></div>
 </div>
@@ -422,7 +422,6 @@ var ratings_mouseover_image=new Image();ratings_mouseover_image.src=ratingsL10n.
 
 
 
-
 <!--=========START=========SITESKIN=========-->
 
 
@@ -433,8 +432,8 @@ var ratings_mouseover_image=new Image();ratings_mouseover_image.src=ratingsL10n.
 
 
 
-<!-- 24 queries. 0.167 seconds. -->
+<!-- 24 queries. 0.293 seconds. -->
 <!-- Performance optimized by W3 Total Cache. Learn more: http://www.w3-edge.com/wordpress-plugins/
 
 
-Served from: www.arcadescool.com @ 2017-06-05 12:56:24 --></div></div></body></html>
+Served from: www.arcadescool.com @ 2017-08-05 09:42:50 --></div></div></body></html>
