worldoftrucks.com (archived on 2017-08-05)
{
  "alexa_rank": 34261,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8008,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.14,
  "homepage_snapshot_redirected_domain": "worldoftrucks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170922065657id_/https://www.worldoftrucks.com/en/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170925122440id_/http%3A//worldoftrucks.com",
  "interval": "2017_B",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "worldoftrucks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170805181009id_/https%3A//www.worldoftrucks.com/en/privacy.php",
  "policy_title": "World of Trucks | Privacy Policy",
  "policy_url": "worldoftrucks.com/en/privacy.php",
  "sha1": "715cb67258531f3eacfd5765f4a787377c7d7097",
  "simhash": 10996042256554701851,
  "simhash_updated": false,
  "site_hostname": "worldoftrucks.com",
  "site_url": "http://worldoftrucks.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20170805181009",
  "word_count": 1273,
  "year": 2017
}

--- a/w/wo/wor/worldoftrucks.com.html
+++ b/w/wo/wor/worldoftrucks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldoftrucks.com privacy policy that was archived on 2016-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161113200644id_/https%3A//www.worldoftrucks.com/en/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldoftrucks.com privacy policy that was archived on 2017-08-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170805181009id_/https%3A//www.worldoftrucks.com/en/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html ng-app="WoTr" class=" js "><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=1000, initial-scale=0.7">
 <meta name="application-name" content="World of Trucks">
 <meta name="msapplication-config" content="https://www.worldoftrucks.com/neutral/msapplication.php">
-<link rel="stylesheet" href="/inc/style.css?v=17" type="text/css">
+<link rel="stylesheet" href="/inc/style.css?v=20" type="text/css">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="/images/favicon32.ico" type="image/x-icon">
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/inc/modernizr.js" type="text/javascript"></script>
@@ -72,7 +72,6 @@
 <div id="header">
 </div>
 </div>
-        
 <div class="cleaner"></div>
 <div id="main-wide">
 <div id="main">
@@ -174,19 +173,17 @@
 <div id="footer-wide">
 <div id="footer">
 <p class="text">
-<a href="index.php">HOME</a>
-<a href="gallery.php">GALLERY</a>
-<a href="online_profile.php">MY PAGE</a>
 <a href="terms.php">TERMS OF SERVICE</a>
 <a href="privacy.php">PRIVACY POLICY</a>
-<span class="copyright"><a href="http://www.scssoft.com" target="_blank">© 2013 SCS Software</a></span>
+<a href="http://www.scssoft.com" target="_blank">© 2013 SCS Software</a>
 </p>
 <div class="social-icon-box-f">
 <a href="http://blog.scssoft.com" class="social-icon blg" target="_blank" title="Check out our blog"></a>
 <a href="http://forum.scssoft.com" class="social-icon forum" target="_blank" title="Meet other players on our forum"></a>
-<a href="http://www.youtube.com/SCSSoftware" class="social-icon yt" target="_blank" title="Visit our YouTube channel"></a>
-<a href="http://www.twitter.com/SCSsoftware" class="social-icon tw" target="_blank" title="Follow us on Twitter"></a>
-<a href="http://www.facebook.com/eurotrucksimulator2" class="social-icon fb" target="_blank" title="Like us on Facebook"></a>
+<a href="https://www.youtube.com/SCSSoftware" class="social-icon yt" target="_blank" title="Visit our YouTube channel"></a>
+<a href="https://www.twitter.com/SCSsoftware" class="social-icon tw" target="_blank" title="Follow us on Twitter"></a>
+<a href="https://www.facebook.com/eurotrucksimulator2" class="social-icon fb" target="_blank" title="Like us on Facebook"></a>
+<a href="https://www.instagram.com/scs.software/" class="social-icon ig" target="_blank" title="Follow us on Instagram"></a>
 </div>
 
 
