--- a/i/is/isa/isaserver.org.html
+++ b/i/is/isa/isaserver.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the isaserver.org privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606035041id_/http%3A//www.isaserver.org/pages/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the isaserver.org privacy policy that was archived on 2017-08-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170805182650id_/http%3A//isaserver.org/pages/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html id="site-isa" lang="en" prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article#"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
