--- a/f/fu/fun/funtimesmedia.com.html
+++ b/f/fu/fun/funtimesmedia.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the funtimesmedia.com privacy policy that was archived on 2017-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604214819id_/https%3A//www.funtimesmedia.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funtimesmedia.com privacy policy that was archived on 2017-08-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170806040330id_/https%3A//www.funtimesmedia.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="front" lang="en"><!--<![endif]--><head>
         <meta charset="utf-8">
-<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-SPQR"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">var gtm_options = {"network":0,"product":"eMedia","domain":".funtimesmedia.com","page":"/privacy-policy","sub":288202}</script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-SPQR"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">var gtm_options = {"network":0,"product":"eMedia","domain":".funtimesmedia.com","page":"/privacy-policy","sub":412079}</script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');</script>
@@ -241,7 +241,7 @@
         <div class="row">
             <div class="small-12 medium-4 large-3 columns">
                 <h4 class="editableText" data-content-name="lp_txt_footer_1">Questions or comments?</h4>
-                <p class="editableText" data-content-name="vi_phone_time">Give us a call (toll-free) at <a href="tel:+1-877-216-7128">1-877-216-7128</a><br>
+                <p class="editableText" data-content-name="vi_phone_time">Give us a call at <a href="tel:+1-646-328-5071">1-646-328-5071</a><br>
 24 hours a day, 7 days a week</p>
             </div>
             <div class="small-12 medium-4 large-3 large-offset-1 columns">
