--- a/n/na/naa/naaibuddies.com.html
+++ b/n/na/naa/naaibuddies.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the naaibuddies.com privacy policy that was archived on 2017-04-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170417102016id_/http%3A//local.naaibuddies.com/help/privacy.cfm%3Fwldsite%3D21613) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the naaibuddies.com privacy policy that was archived on 2017-08-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170807014701id_/http%3A//local.naaibuddies.com/help/privacy.cfm%3Fwldsite%3D21613) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!--<![endif]--><head>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>NaaiBuddies.com :: NaaiBuddies.com Member Privacy Policy</title>
-	<meta name="robots" content="noindex,nofollow"> <meta content="VYLmXOSCN00uNzZjFvpYfTjYOwTVNGb458ttD16CAt0=" name="csrf-token"> 
+	<meta name="robots" content="noindex,nofollow"> <meta content="hSdt1liOJZlFP0T9r7uruM9A5g3vdYXuJmPgtqgbaXY=" name="csrf-token"> 
 
 	
-	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/core-7DC1F7AD41D319B1CFB9D63C33E37371.css">
+	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/core-A0C1C4D26229CD63852C441D08B5F2BE.css">
 
 	
 
-	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/theme-BA8F175102312A3DE06B263274F84321.css">
+	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/21613/theme-E1AA287C4CCA6C955775C10B2D0B716E.css">
 	
 	
 
@@ -29,6 +29,7 @@
 		<script src="http://s.wldcdn.net/assets/template/premium/scripts/legacy.ie.min.js?70f9315fb3afc09f4fc3cd0010171b90"></script>
 	
 	</script><![endif]-->
+
 </head>
 <body class="visitor black" id="help-privacy" ng-app="wld" ng-controller="WldCtrl">
 	<div id="page-wrapper" class="nonjs">
@@ -390,8 +391,8 @@ data to these websites.
 		
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/vendor.min.js?9f94ab9f305fc2b67f57f2b643bd0903" type="text/javascript" charset="utf-8"></script>
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/en_ZA.min.js?2d646246cdc54fa64aed130de00ab952" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?8c3c37170294d4365fa705b5613d018b" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?1527fe48ba4fa4d1bb3047c77fcbf0ac" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?8f9092972d02b140cecc4c2ebcc5ac25" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?6e0e18134aba146047ceab551367d5b6" type="text/javascript" charset="utf-8"></script>
 
 
 	</div><!-- #js-holder -->
@@ -437,22 +438,9 @@ data to these websites.
 	
 		App.Analytics.track({type: "pageview"});
 	
-
-		// code to set the __utmk parameter in the cookie scope so that it is available for server side redirects.
-		_gaq.push(function() {
-			var pageTracker = _gat._getTrackerByName('app'),
-				utmk = /[?&]__utmk=([^&]+)/.exec(pageTracker._getLinkerUrl("")),
-				expiryDate;
-			if (utmk) {
-				expiryDate = new Date();
-				expiryDate.setDate(expiryDate.getDate() + 1);
-				document.cookie = "__utmk=" + escape(utmk[1]) + "; expires=" + expiryDate.toUTCString() + "; path=/";
-			}
-		});
-
 	</script>
 
-<noscript><img src="//www.google-analytics.com/__utm.gif?utmwv=4.3&amp;utmn=404855690&amp;utmhn=local.naaibuddies.com&amp;utmsr=-&utmsc=-&utmul=-&utmje=0&utmfl=-&utmdt=-&amp;utmr=http%3A%2F%2Fwww%2Enaaibuddies%2Ecom%2F&amp;utmp=/noscript&amp;utmac=UA-3965813-20&amp;utmcc=__utma%3D85345961.1134194901.1492424416.1492424416.1492424416.2%3B%2B__utmb%3D85345961%3B%2B__utmc%3D85345961%3B%2B__utmz%3D85345961.1492424416.2.2.utmccn%3D(direct)%7Cutmcsr%3D(direct)%7Cutmcmd%3D(none)%3B%2B__utmv%3D85345961.-%3B" /></noscript> <!-- START ADVERTISING FUNCTIONS  -->
+<!-- START ADVERTISING FUNCTIONS  -->
 <script type="text/javascript">
 <!--
 (function() {
@@ -486,7 +474,7 @@ script.type = "text/javascript";
 script.async = true;
 document.body.appendChild(script);
 })();
-</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580503412879" type="text/javascript" async=""></script>
+</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580503412979" type="text/javascript" async=""></script>
 <!-- End DYNAMIC CROSS SELL --> 
 
 
