--- a/c/ch/cha/chatliv.com.html
+++ b/c/ch/cha/chatliv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chatliv.com privacy policy that was archived on 2017-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170607100006id_/https%3A//www.chatliv.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chatliv.com privacy policy that was archived on 2017-08-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170807072252id_/https%3A//chatliv.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 
