--- a/m/ma/map/maplesoft.com.html
+++ b/m/ma/map/maplesoft.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the maplesoft.com privacy policy that was archived on 2017-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170626185850id_/http%3A//www.maplesoft.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the maplesoft.com privacy policy that was archived on 2017-08-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170807132404id_/https%3A//www.maplesoft.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox flexboxlegacy rgba multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns csstransitions fontface generatedcontent"><head>
     
-<script type="text/javascript" src="https://pi.pardot.com/pd.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script language="javascript" src="/omniture/VisitorAPI.js" type="text/javascript"></script>
+<script type="text/javascript" src="https://pi.pardot.com/pd.js"></script><script src="//bat.bing.com/bat.js" async=""></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script language="javascript" src="/omniture/VisitorAPI.js" type="text/javascript"></script>
 <script language="javascript" src="/omniture/s_code.js" type="text/javascript"></script>
 <!-- JQuery CDN references -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
@@ -25,6 +25,9 @@
   ga('send', 'pageview');
 </script>
 <!-- Google Analytics code snippet END -->
+<!-- Bing Ads START -->
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"5695845"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script><noscript><img src="//bat.bing.com/action/0?ti=5695845&Ver=2" height="0" width="0" style="display:none; visibility: hidden;" /></noscript>
+<!-- Bing Ads END -->
 <!-- Adobe retarget Multiview snippet START -->
 <script src="//assets.adobedtm.com/c876840ac68fc41c08a580a3fb1869c51ca83380/satelliteLib-d0cbd0c0203ddc681bdc68a0ebee7ceaadb3e507.js"></script>
 <!-- Adobe retarget Multiview snippet END -->
