destinystatus.com (archived on 2017-08-07)
{
  "alexa_rank": 93368,
  "analysis_subcorpus": true,
  "categories": "education;entertainment;games",
  "char_count": 6678,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.78,
  "homepage_snapshot_redirected_domain": "destinystatus.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170924074915id_/http://www.destinystatus.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170924074915id_/http%3A//destinystatus.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "destinystatus.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170807163100id_/http%3A//www.destinystatus.com/privacy",
  "policy_title": "Destiny Status - Character Progress & Checklist",
  "policy_url": "destinystatus.com/privacy",
  "sha1": "a0c38d66f59a5fb0dd3a9f9a815f65870b4983f3",
  "simhash": 10991189569938689115,
  "simhash_updated": false,
  "site_hostname": "destinystatus.com",
  "site_url": "http://destinystatus.com",
  "smog": 15.77,
  "strict_updated": false,
  "timestamp": "20170807163100",
  "word_count": 1058,
  "year": 2017
}

--- a/d/de/des/destinystatus.com.html
+++ b/d/de/des/destinystatus.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the destinystatus.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606002544id_/http%3A//destinystatus.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the destinystatus.com privacy policy that was archived on 2017-08-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170807163100id_/http%3A//www.destinystatus.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="csrf-token" content="LBUPvWsH3UwS51RlAli6ndvokKhZWeAINZFrp0n2">
+	<meta name="csrf-token" content="hvInA4jAr1ih9txFnPWkGtMSjhREAcJKBushEMTh">
 	<meta name="description" content="Destiny progression, weekly checklist and Grimoire completion!">
 	<title>Destiny Status - Character Progress &amp; Checklist</title>
 	<link rel="shortcut icon" href="http://destinystatus.com/favicon.ico">
@@ -37,7 +37,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<form action="/" class="navbar-form navbar-left" role="search" method="post">
-				<input type="hidden" name="_token" value="LBUPvWsH3UwS51RlAli6ndvokKhZWeAINZFrp0n2">
+				<input type="hidden" name="_token" value="hvInA4jAr1ih9txFnPWkGtMSjhREAcJKBushEMTh">
 				<div class="form-group input-group">
 					<input type="text" class="form-control" placeholder="Gamertag" name="gamertag" value="" maxlength="16" pattern="[A-Za-z][A-Za-z0-9_- ]{0,15}" title="Please enter a valid gamertag or PSN Id">
 					<span class="input-group-btn">
@@ -165,6 +165,6 @@
   ga('tracker.send', 'pageview');
 </script>
 <script src="https://db.destinytracker.com/Scripts/Tooltip.js"></script>
-
+<script>/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/\>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
 
 </body></html>
