--- a/g/go/goi/goinglegal.com.html
+++ b/g/go/goi/goinglegal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goinglegal.com privacy policy that was archived on 2016-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161026031214id_/http%3A//www.goinglegal.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goinglegal.com privacy policy that was archived on 2017-08-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170807223804id_/http%3A//www.goinglegal.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <base href="http://www.goinglegal.com"> 
@@ -10,7 +10,7 @@
 <meta name="Keywords" content="Privacy policy">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Privacy Policy of Article Alley the leader amongst Article Directories</title>
-<script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script>
 <script type="text/javascript">
 GS_googleAddAdSenseService("ca-pub-0192347865020696");
 GS_googleEnableAllServices();
@@ -147,15 +147,15 @@ var dc_PublisherID = 45273 ;
 </script>
 <script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js">
 </script>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-6883667-6");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89099950-2', 'auto');
+  ga('send', 'pageview');
+</script>
 <script src="http://cdn.wibiya.com/Loaders/Loader_240745.js" type="text/javascript"></script>
 
 
