--- a/n/ne/net/networkblazer.com.html
+++ b/n/ne/net/networkblazer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the networkblazer.com privacy policy that was archived on 2016-08-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160805004226id_/http%3A//www.networkblazer.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the networkblazer.com privacy policy that was archived on 2017-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170808011954id_/http%3A//networkblazer.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -124,7 +124,7 @@
         <!--<a href="http://www.facebook.com/pages/Network-Blazer/229136307125443"><img src="../res/img/mini-facebook.png" alt="Facebook" title="Follow us on Facebook" /></a>-->
     </section>
     <section class="foot-mid">
-        ©2016    </section>
+        ©2017    </section>
 </footer>
 
 
