--- a/n/na/nak/nakednews.eu.html
+++ b/n/na/nak/nakednews.eu.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the nakednews.eu privacy policy that was archived on 2017-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170608134346id_/http%3A//www.nakednews.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nakednews.eu privacy policy that was archived on 2017-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170808064153id_/https%3A//www.nakednews.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head><meta content="IE=edge" http-equiv="X-UA-Compatible"><title>Privacy Policy | Naked News
 </title>
 <meta content="zZaBx3_mLkMX-2UQ8ktIw0lG1hq5tvBx7KtszX3nt3I" name="google-site-verification">
 <meta content="zZaBx3_mLkMX-2UQ8ktIw0lG1hq5tvBx7KtszX3nt3I" name="google-site-verification">
 <script type="text/javascript" async="" src="https://d24n15hnbwhuhn.cloudfront.net/libs/amplitude-3.0.1-min.gz.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script>
-  var __authorized = false,__authenticated = false,__join_url = '/account/purchase?_cd=20077620-00_ver0',__cdata = '20077620-00_ver0',__membership = false,__previewable = false;
+  var __authorized = false,__authenticated = false,__join_url = '/account/purchase',__cdata = '',__membership = false,__previewable = false;
   var __domain = 'NakedNews.com', __site = 'Naked News';
   var __player_quality = 'nn_player_quality';
 </script><meta content="naked news, naked, breaking news, news anchorwoman, sexy news anchors, hot news readers, celebrity news" name="keywords"><meta content="noindex,follow" name="robots"><meta charset="utf-8"><!-- %link{:href => asset_path('icons/favicon.ico'), :rel => "shortcut icon"} --><link href="http://www.nakednewscdn.com/assets/icons/apple-touch-icon-9f2d8a180f0cb71e1e9cdedbf5894fd1.png" rel="apple-touch-icon"><link href="http://www2.nakednewscdn.com/assets/icons/apple-touch-icon-72x72-9f2d8a180f0cb71e1e9cdedbf5894fd1.png" rel="apple-touch-icon" sizes="72x72"><link href="http://www.nakednewscdn.com/assets/icons/apple-touch-icon-114x114-90b6bbe8ee17d9d02387a18d577cad33.png" rel="apple-touch-icon" sizes="114x114"><meta content="width=device-width, initial-scale=1.0" name="viewport"><meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="jxS9SJflfJDZZt6v9QRFSoOY8XMEE6eBaknJf8Ktlhd8rlCavP5q6WPdmSuR/xs/lUFN1ZjQTwwREa7sx0pEVQ==">
+<meta name="csrf-token" content="S1rkpO/gNtu5obEFXZtsXtBHKgvHpW85M5ZMuQMxdGVxuyFOaJxPeif/xGP5WNguu5o8AmGa3tkiHKykPTWKEw==">
 <script type="text/javascript">
           var googletag = googletag || {};
           googletag.cmd = googletag.cmd || [];
@@ -32,7 +32,7 @@
           });
         </script>
 <link rel="shortcut icon" type="image/x-icon" href="http://www3.nakednewscdn.com/assets/favicon-1a547848d00a34dab679b1392c64caf7.png">
-<link rel="stylesheet" media="all" href="http://www2.nakednewscdn.com/assets/nakednews-d45060c58792dbe9384eba54cb544036.css">
+<link rel="stylesheet" media="all" href="http://www.nakednewscdn.com/assets/nakednews-cbe818899abd79023fab4a721e194302.css">
 
 <script type="text/javascript">
       !function(f,b,e,v,n,t,s)
@@ -56,10 +56,10 @@
 <!--[if lte IE 6]>
 <style>#ie6_notification {display: block;}</style>
 <![endif]-->
-<link rel="stylesheet" media="screen" href="http://www2.nakednewscdn.com/assets/sk_special_offer_video-0e202cf32be7b00cb43c72b11b39dac6.css">
+
 
 <!--[if IE]>
-<script src="http://www2.nakednewscdn.com/assets/respond/respond.src-f8b881298d8c127190b1c732d8851eba.js"></script>
+<script src="http://www2.nakednewscdn.com/assets/respond/respond.src-7e23ece89c15b33eac9023423c2f607b.js"></script>
 <![endif]-->
 </head>
 <body>
@@ -193,7 +193,7 @@ Should you have other questions or concerns about this Privacy Policy, please se
 <div class="col-md-3 col-sm-3 col-xs-12">
 <p class="heading">Site Features</p>
 <ul class="list-unstyled">
-<li class=" "><a href="/account/purchase?_cd=20077620-00_ver0">Join Naked News</a></li>
+<li class=" "><a href="/account/purchase">Join Naked News</a></li>
 <li class=" "><a href="/home">Current program</a></li>
 <li class=" "><a href="/roku">Roku Device</a></li>
 <li class=" "><a href="/naked-amateur-auditions">Amateur Auditions</a></li>
@@ -329,65 +329,52 @@ ga('send','pageview','http://www.nakednews.com/privacy_policy');
 
 
 
-<script src="http://www3.nakednewscdn.com/assets/app-core-bf1abf42d52267d1a34b786220278f50.js"></script>
+<script src="http://www.nakednewscdn.com/assets/app-core-1bca910d92a88e73a3ead5bb21eaeaae.js"></script>
 <script src="http://www3.nakednewscdn.com/assets/app-10ccf2dbe5402b1cf7bbd366290c9201.js"></script>
 <script type="text/javascript">var _sksow = { content_element:  '#application',
                content_class:    'sk-wallpapered',
-               top:              { name:          '20170203_generic_lifetime_179',
-image:         'http://www3.nakednewscdn.com/assets/special_offer/20170203_generic_lifetime_179/wallpaper_header-26f02aa179e9e51bd29069fee2cd66c1.jpg',
-url:           '/account/purchase?_cd=20170203_generic_lifetime_179_wallpaper',
+               top:              { name:          '',
+image:         '',
+url:           '',
 color:         '',
-color_default: '#252525',
+color_default: '',
 new_window:    false
  },
-               left:             { name:          '20170203_generic_lifetime_179',
-image:         'http://www2.nakednewscdn.com/assets/special_offer/20170203_generic_lifetime_179/wallpaper_left-217c85c1afc042cb38d297e022a9d947.jpg',
-url:           '/account/purchase?_cd=20170203_generic_lifetime_179_wallpaper',
+               left:             { name:          '',
+image:         '',
+url:           '',
 color:         '',
-color_default: '#252525',
+color_default: '',
 new_window:    false
  },
-               right:            { name:          '20170203_generic_lifetime_179',
-image:         'http://www.nakednewscdn.com/assets/special_offer/20170203_generic_lifetime_179/wallpaper_right-a9feb55567f3d658f0beac73de71966b.jpg',
-url:           '/account/purchase?_cd=20170203_generic_lifetime_179_wallpaper',
+               right:            { name:          '',
+image:         '',
+url:           '',
 color:         '',
-color_default: '#252525',
+color_default: '',
 new_window:    false
  },
-               bottom:           { name:   '20170203_generic_lifetime_179',
+               bottom:           { name:   '',
 images: { show:    '',
           hide:    '',
           desktop: '',
           full:    '',
           mobile:  '' },
 url:           '',
-color:         '#fff',
-color_default: '#252525',
-close_style:   'dark',
+color:         '',
+color_default: '',
+close_style:   '',
 new_window:    false
  } }
-</script><div class="sk-so-modal" data-image="" data-name="20170203_generic_lifetime_179" data-skip="true" data-video="http://media.nakednewscdn.com/data/special_offers/eoy_2016/nakednews_2016.mp4" id="sk_so_modal" role="dialog" tabindex="-1">
-<div class="sk-so-modal-body">
-<div class="sk-so-modal-container">
-<div class="sk-so-modal-mask" style="background-color: #000000"></div>
-<a class="sk-so-modal-image-container" href="/account/purchase?_cd=20170203_generic_lifetime_179_popup"><img class="sk-so-image sk-so-image-desktop" src="http://www2.nakednewscdn.com/assets/special_offer/20170203_generic_lifetime_179/popup_desktop-98e0f5126eb8d5d78d4c3f911851e28d.png" alt="Popup desktop">
-<img class="sk-so-image sk-so-image-mobile" src="http://www3.nakednewscdn.com/assets/special_offer/20170203_generic_lifetime_179/popup_mobile-f77fc0889443dc1770f70eca4ac90fa2.png" alt="Popup mobile">
-</a><div class="sk-so-modal-btn">
-<div><a style="background-color: #d64f96 !important;color: #ffffff !important;" class="sk-so-modal-join" href="/account/purchase?_cd=20170203_generic_lifetime_179_popup">yes, give me naked news forever &gt;&gt;</a></div>
-<div><a style="background-color: #4c4c4c !important;color: #9a9a9a !important;" class="sk-so-modal-close" href="javascript:void(0);">No, thank you &gt;&gt;</a></div>
-</div>
-</div>
-</div>
-</div>
+</script>
 
-<script src="http://www.nakednewscdn.com/assets/sk_special_offer_video-fad5f6ec1a5b6734edc3e061ce18379e.js"></script>
 <script src="http://www.nakednewscdn.com/assets/ads-efcdb3a8264a0b232175fb80a3a25457.js"></script>
 <script type="text/javascript">(function(e,t){var n=e.amplitude||{_q:[],_iq:{}};var r=t.createElement("script");r.type="text/javascript";r.async=true;r.src="https://d24n15hnbwhuhn.cloudfront.net/libs/amplitude-3.0.1-min.gz.js";r.onload=function(){e.amplitude.runQueuedFunctions()};var i=t.getElementsByTagName("script")[0];i.parentNode.insertBefore(r,i);function s(e,t){e.prototype[t]=function(){this._q.push([t].concat(Array.prototype.slice.call(arguments,0)));return this}}var o=function(){this._q=[];return this};var a=["add","append","clearAll","prepend","set","setOnce","unset"];for(var u=0;u<a.length;u++){s(o,a[u])}n.Identify=o;var c=function(){this._q=[];return this;};var p=["setProductId","setQuantity","setPrice","setRevenueType","setEventProperties"];for(var l=0;l<p.length;l++){s(c,p[l])}n.Revenue=c;var d=["init","logEvent","logRevenue","setUserId","setUserProperties","setOptOut","setVersionName","setDomain","setDeviceId","setGlobalUserProperties","identify","clearUserProperties","setGroup","logRevenueV2","regenerateDeviceId"];function v(e){function t(t){e[t]=function(){e._q.push([t].concat(Array.prototype.slice.call(arguments,0)));}}for(var n=0;n<d.length;n++){t(d[n])}}v(n);n.getInstance=function(e){e=(!e||e.length===0?"$default_instance":e).toLowerCase();if(!n._iq.hasOwnProperty(e)){n._iq[e]={_q:[]};v(n._iq[e])}return n._iq[e]};e.amplitude=n;})(window,document);amplitude.getInstance().init("4a82447444837b5d20ec84cf488c4b67", {});window._sktrk = [];_sktrk.push(function() {SK.EventTracking.amplitude = true;});</script>
 <script type="text/javascript">(function() {_sktrk.push(function() {SK.EventTracking.setProperties({"accountState":"guest"});SK.EventTracking.setPropertiesOnce({"siteHost":"NakedNews.com","affiliateReferral":false});});})();</script>
-<script type="text/javascript">(function() {_sktrk.push(function() {SK.EventTracking.setSplitTestProperty("splitTestEnabled","20170508_special_offer_generic_vs_none",0);});})();</script>
 
 
 
+<img alt="" style="position: absolute; left: -10000px;" src="//r.remarketingpixel.com/px.gif?akey=811a2eea1f7ddf4098c9c57f7bbb91ff">
 
 
 
