--- a/d/do/dor/dornc.com.html
+++ b/d/do/dor/dornc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dornc.com privacy policy that was archived on 2017-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170609193710id_/http%3A//www.dornc.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dornc.com privacy policy that was archived on 2017-08-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170809130917id_/http%3A//dornc.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
