--- a/a/as/ask/asknumbers.com.html
+++ b/a/as/ask/asknumbers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the asknumbers.com privacy policy that was archived on 2017-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170610112448id_/http%3A//www.asknumbers.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the asknumbers.com privacy policy that was archived on 2017-08-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170810023821id_/http%3A//www.asknumbers.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 		<title>Privacy Policy and Terms of Use</title>
@@ -141,17 +141,14 @@
 </td>
 </tr>
 <tr><td>
-<div class="footer">2005 - Asknumbers.com. All rights reserved. <a href="mailto:webmaster@asknumbers.com">Contact Us</a>
-<br><a href="privacy-policy.aspx">Privacy and Terms</a></div>
+<div class="footer">2005 - asknumbers.com. All rights reserved. <a href="mailto:webmaster@asknumbers.com">Contact Us</a><br><a href="privacy-policy.aspx">Privacy and Terms</a></div>
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-52338275-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 </td></tr>
