freewebmonitoring.com (archived on 2017-08-14)
{
  "alexa_rank": 538788,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2850,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.56,
  "homepage_snapshot_redirected_domain": "freewebmonitoring.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170929055719id_/https://www.freewebmonitoring.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170929055719id_/http%3A//freewebmonitoring.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "freewebmonitoring.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170814023838id_/https%3A//www.freewebmonitoring.com/privacy.html",
  "policy_title": "Free Web Monitoring: Your Free Web Site Monitoring Service",
  "policy_url": "freewebmonitoring.com/privacy.html",
  "sha1": "a6d87c6374f87bffff09f49ac7b3fc7828e03fb2",
  "simhash": 15684755672449374547,
  "simhash_updated": false,
  "site_hostname": "freewebmonitoring.com",
  "site_url": "http://freewebmonitoring.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170814023838",
  "word_count": 445,
  "year": 2017
}

--- a/f/fr/fre/freewebmonitoring.com.html
+++ b/f/fr/fre/freewebmonitoring.com.html
@@ -1,12 +1,11 @@
-<!--The following is the downloaded HTML source of the freewebmonitoring.com privacy policy that was archived on 2009-03-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090326084414id_/http%3A//www.freewebmonitoring.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freewebmonitoring.com privacy policy that was archived on 2017-08-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170814023838id_/https%3A//www.freewebmonitoring.com/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head>
+<!DOCTYPE html><html><head>
 
 <title>Free Web Monitoring: Your Free Web Site Monitoring Service</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="aesop" content="sales">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Free Web Site Monitoring. Monitor your web site's availability 24 hours a day, 7 days a week with instant email alerts and weekly web site performance statistics.">
 
 <meta name="keywords" content="free web monitoring, web monitoring, free monitoring, monitoring, web site monitoring, free web site monitoring, monitoring service, site monitoring, web site monitoring service, monitoring services, web site performance monitoring, web site monitoring alert, web site availability monitoring, web performance monitoring, internet monitoring, server monitoring, monitoring program, monitoring tool, web server monitoring, web site monitoring tool, server monitoring tool, free internet monitoring, web site monitoring program, internet monitoring tool, web page monitoring">
@@ -15,244 +14,147 @@
 <meta name="classification" content="Internet Services">
 <meta name="copyright" content="GreenWave Online Inc.">
 <meta name="createdate" content="October 25 2005">
-<meta name="dateoflastmodification" content="October 25 2005">
 <meta name="robots" content="ALL">
 <meta name="rating" content="GENERAL">
 <meta name="distribution" content="GLOBAL">
-<meta name="revisit-after" content="30 Days">
+<meta property="og:image" content="http://www.freewebmonitoring.com/images/fwm_fb_profile.jpg">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<style type="text/css">
-<!--
-.style2 {
-	font-weight: bold;
-	color: #FFFFFF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
-}
-.style3 {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-}
-.style4 {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 11px;
-}
-.style5 {font-size: 9px}
-body {
-	background-color: #EDEDED;
-}
--->
-</style>
+<link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
+
+<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/hamburger.js"></script>
+
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 </head>
 
-<body style="margin:0px;">
+<body>
 
-<table width="770" border="0" align="center" cellpadding="5" cellspacing="0" bgcolor="#FFFFFF">
-<tbody><tr>
-<td>
+<div id="container">
 
-<table width="770" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td>
-<a href="http://www.freewebmonitoring.com" style="text-decoration: none">
-<img name="logo" src="images/logo.gif" width="243" height="30" border="0" id="logo" alt="Free Web Monitoring: Your Free Web Site Monitoring Service"></a>
-</td>
-</tr>
-</tbody></table>
+<div class="row row-hor-pad mobile-head">
 
-<table width="770" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td width="22%"><img name="bluelines1" src="images/bluelines1.gif" width="177" height="28" border="0" id="bluelines1"></td>
-<td width="2%"><img name="bluetab1" src="images/bluetab1.gif" width="14" height="28" border="0" id="bluetab1"></td>
-<td width="74%" bgcolor="#0C71E4" class="style2"><div align="center">
-I &nbsp;<a href="http://www.freewebmonitoring.com" style="text-decoration: none"><font color="#FFFFFF">Home</font></a>&nbsp; I &nbsp;
-<a href="/about.html" style="text-decoration: none"><font color="#FFFFFF">About Us</font></a>&nbsp; I &nbsp;
-<a href="/privacy.html" style="text-decoration: none"><font color="#FFFFFF">Privacy Policy</font></a>&nbsp; I &nbsp;
-<a href="/faq.html" style="text-decoration: none"><font color="#FFFFFF">FAQ</font></a>&nbsp; I &nbsp;
-<a href="/link.html" style="text-decoration: none"><font color="#FFFFFF">Link to FWM</font></a>&nbsp; I &nbsp;
-<a href="/contact.html" style="text-decoration: none"><font color="#FFFFFF">Contact Us</font></a>&nbsp; I &nbsp;
-</div></td>
-<td width="2%"><img name="bluetab2" src="images/bluetab2.gif" width="14" height="28" border="0" id="bluetab2"></td>
-</tr>
-</tbody></table>
+<header>
 
-<table width="770" height="5" border="0" cellpadding="0" cellspacing="0" bgcolor="#FF6600">
-<tbody><tr>
-<td></td>
-</tr>
-</tbody></table>
+<a href="http://www.freewebmonitoring.com">
+<img src="images/m-logo-1a.png" class="logo">
+</a>
 
-<table width="770" height="5" border="0" cellpadding="0" cellspacing="0" bgcolor="#FF6600">
-<tbody><tr>
-<td><img name="banner" src="images/banner.gif" width="770" height="103" border="0" id="banner"></td>
-</tr>
-</tbody></table>
-
-<table width="770" height="5" border="0" cellpadding="0" cellspacing="0" bgcolor="#FF6600">
-<tbody><tr>
-<td></td>
-</tr>
-</tbody></table>
-
-<table width="770" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td bgcolor="#EDEDED" width="177" valign="top">
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td background="images/pixel.gif"><form name="form1" method="post" action="/cgi-bin/ms.cgi" onsubmit="this.tz_offset.value = (new Date()).getTimezoneOffset();">
-<input type="hidden" name="tz_offset" value="-1">
-
-<table width="100%" border="0" cellspacing="0" cellpadding="2">
-<tbody><tr>
-<td class="style4">Email:</td>
-</tr>
-<tr>
-<td><input name="email" type="text" size="20"></td>
-</tr>
-<tr>
-<td class="style4">Password:</td>
-</tr>
-<tr>
-<td><input name="password" type="password" size="20"></td>
-</tr>
-<tr> </tr>
-<tr>
-<td><div align="center">
-<input type="submit" name="Submit" value="Member Log In">
+<div id="hamburger">
+<div></div>
+<div></div>
+<div></div>
 </div>
-</td>
-</tr>
-<tr>
-<td class="style4"><div align="center">
-<a href="/forgot.html" style="text-decoration: none"><font color="#4995EC">Forgot My Password</font></a>
+      
+</header>
+
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About Us</a></li>
+<li><a href="create-account.html">Create Account</a></li>
+<li><a href="login.html">Login</a></li>
+<li><a href="privacy.html">Privacy</a></li>
+<li><a href="faq.html">FAQ</a></li>
+<li><a href="link.html">Link to FWM</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+
 </div>
-</td>
-</tr>
-</tbody></table>
 
-</form>
-</td>
-</tr>
-</tbody></table>
+<div class="row row-hor-pad desk-head">
 
-<table width="168" border="0" cellpadding="5" cellspacing="0" bgcolor="#EDEDED">
-<tbody><tr>
-<td bgcolor="#FF6600" class="style2"><a href="http://www.vipmonitoring.com" target="_blank" style="text-decoration: none">
-<font color="#FFFFFF">VIP Monitoring</font></a> </td>
-</tr>
-<tr>
-<td class="style4">Free trial of our premium website monitoring service. Monitor up to 10 URLs and receive alerts via email, instant messenger and cellphone.</td>
-</tr>
-<tr>
-<td bgcolor="#FF6600" class="style2"><a href="http://www.submissionmonster.com" target="_blank" style="text-decoration: none">
-<font color="#FFFFFF">Submission Monster</font></a> </td>
-</tr>
-<tr>
-<td class="style4">Free trial of our professional search engine submission service. Program includes website submission, 12 SEO tools and much more.</td>
-</tr>
-<tr>
-<td bgcolor="#FF6600" class="style2"><a href="http://www.newwebdirectory.com" target="_blank" style="text-decoration: none">
-<font color="#FFFFFF">New Web Directory</font></a> </td>
-</tr>
-<tr>
-<td class="style4">A new internet web directory of professionally reviewed web sites providing both free and paid site submission.</td>
-
-</tr>
-</tbody></table>
-
-</td>
-<td valign="top" width="80%">
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td colspan="2">
-
-<table width="100%" border="0" cellspacing="0" cellpadding="7">
-<tbody><tr>
-<td><span class="style3">
-<br>
-<center><b>Privacy Policy Overview</b></center>
-<p>
-This Privacy Policy covers the Free Web Monitoring treatment of personal information that is recorded when you sign-up for our 
-free web site monitoring service. 
-</p><p>
-Our privacy policy does not apply to the practices of other companies advertised, or otherwise listed, on the Free Web Monitoring 
-web site, nor does it extend to people that Free Web Monitoring does not employ or manage.
-</p><p>
-<b>Information Collection and Use</b>
-</p><p>
-Unlike many web site monitoring services that charge for web site monitoring and collect personal information as well, 
-Free Web Monitoring is a free service. The only information collected during sign-up is Name, Email Address, URL and 
-IP address.  
-</p><p>
-Your use of Free Web Monitoring's web site monitoring service constitutes a business relationship wherein we provide a business 
-service for your web site(s). In exchange, Free Web Monitoring reserves the right to use the contact information collected during 
-sign up to provide our free newsletter included with your weekly statistics, to deliver email alerts, to deliver notices regarding changes or updates 
-to our service, to inform you of additions to the GreenWave Online Network of web sites, or to send announcements and carefully screened 
-offers and information on behalf of our partners or advertisers. 
-</p><p>
-With the exception of auto-response messages which are sent when you sign-up for our free web site monitoirng service and contain important 
-account information, you may remove yourself from all email alerts, notices and announcements using the unsubscribe methods provided in those mailings. 
-Any mailing received from our company is clearly identified and includes at least 2 methods to remove yourself from future mailings. <b>Please note, when 
-you unsubscribe you will be removing your Free Web Monitoring membership and web site monitoring service.</b> Should you encounter problems in this 
-regard, contact: inquiry[at]freewebmonitoring.com. Our turnaround time for responding to unsubscribe requests is generally 24 hours.
-</p><p>
-<b>Information Sharing and Disclosure</b>
-</p><p>
-Free Web Monitoring maintains your email address and other pertinent personal information, provided at the time of your sign-up, 
-on the premises. Free Web Monitoring does not rent or sell email addresses nor any other personal data.
-</p><p>
-<b>Cookies</b>
-</p><p>
-At this time, cookies are not used on the Free Web Monitoring site.
-</p><p>
-<b>Security</b>
-</p><p>
-Your personal information is stored in a protected directory. Access is restricted to Free Web Monitoring staff.
-</p><p>
-<b>Changes to this Privacy Policy</b>
-</p><p>
-Free Web Monitoring may amend this policy from time to time. If significant changes are made in the way your personal information is 
-used, we will post a prominent announcement on our site notifying you of the change.
-</p><p>
-<b>Questions or Suggestions</b>
-</p><p>
-Questions or suggestions may be sent to: inquiry[at]freewebmonitoring.com
-</p></span></td>
-</tr>
-</tbody></table>
-
-</td>
-</tr>
-</tbody></table>
-
-</td>
-</tr>
-</tbody></table>
-
-<table width="770" border="0" cellpadding="0" cellspacing="0" bgcolor="#1B91D6">
-<tbody><tr>
-<td width="23%"><img name="greyblue" src="images/greyblue.gif" width="177" height="31" border="0" id="greyblue"></td>
-<td width="77%" bgcolor="#1B91D6" class="style2"><div align="center" class="style5">
-<b><a href="http://www.exactseek.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">ExactSeek</font></a> | 
-<a href="http://www.metawebsearch.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">MetaWebSearch</font></a> | 
-<a href="http://www.blog-search.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">Blog-Search</font></a> | 
-<a href="http://www.goarticles.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">GoArticles</font></a> | 
-<a href="http://www.submissionmonster.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">SubmissionMonster</font></a> | 
-<a href="http://www.newwebdirectory.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">NewWebDirectory</font></a> | 
-<a href="http://www.sitepronews.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">SiteProNews</font></a> | 
-<a href="http://www.seo-news.com" target="_blank" style="text-decoration: none"><font color="#FFFFFF">SEO-News</font></a></b>
+<div class="logo">
+<a href="http://www.freewebmonitoring.com/">
+<img src="images/fwm-logo.png">
+</a>
 </div>
-</td>
-</tr>
-</tbody></table>
 
-</td>
-</tr>
-</tbody></table>
+<div class="main-nav">
+<ul>
+<a href="index.html"><li>Home</li></a>
+<a href="about.html"><li>About Us</li></a>
+<a href="create-account.html"><li>Create Account</li></a>
+<a href="login.html"><li>Login</li></a>
+<a href="privacy.html"><li>Privacy</li></a>
+<a href="faq.html"><li>FAQ</li></a>
+<a href="link.html"><li>Link To FWM</li></a>
+<a href="contact.html"><li>Contact Us</li></a>
+</ul>
+</div>
 
+</div>
+
+<div id="contentLayer"></div>
+
+<div class="row head-banner">
+<img src="images/main-banner.jpg">
+</div>
+
+<div id="content">
+
+<div class="main-txt row-hor-pad">
+<h2 class="centered-header sml-head-gap">Privacy Policy Overview</h2>
+<p>This Privacy Policy covers the Free Web Monitoring treatment of personal information that is recorded when you sign-up for our free web site monitoring service.</p>
+<p>Our privacy policy does not apply to the practices of other companies advertised, or otherwise listed, on the Free Web Monitoring web site, nor does it extend to people that Free Web Monitoring does not employ or manage.</p>
+<h4>Information Collection and Use</h4>
+<p>Unlike many web site monitoring services that charge for web site monitoring and collect personal information as well, Free Web Monitoring is a free service. The only information collected 
+during sign-up is Name, Email Address, URL and IP address.</p>
+<p>Your use of Free Web Monitoring's web site monitoring service constitutes a business relationship wherein we provide a business service for your web site(s). In exchange, 
+Free Web Monitoring reserves the right to use the contact information collected during sign up to provide our free newsletter included with your weekly statistics, to deliver email alerts, to 
+deliver notices regarding changes or updates to our service, to inform you of additions to the GreenWave Online Network of web sites, or to send announcements and carefully screened offers and 
+information on behalf of our partners or advertisers.</p>
+<p>With the exception of auto-response messages which are sent when you sign-up for our free web site monitoirng service and contain important account information, you may 
+remove yourself from all email alerts, notices and announcements using the unsubscribe methods provided in those mailings. Any mailing received from our company is clearly identified and includes 
+at least 2 methods to remove yourself from future mailings. Please note, when you unsubscribe you will be removing your Free Web Monitoring membership and web site monitoring service. 
+Should you encounter problems in this regard, contact: inquiry[at]freewebmonitoring.com. Our turnaround time for responding to unsubscribe requests is generally 24 hours.</p>
+<h4>Information Sharing and Disclosure</h4>
+<p>Free Web Monitoring maintains your email address and other pertinent personal information, provided at the time of your sign-up, on the premises. Free Web Monitoring does not rent or sell email 
+addresses nor any other personal data.</p>
+<h4>Cookies</h4>
+<p>At this time, cookies are not used on the Free Web Monitoring site.</p>
+<h4>Security</h4>
+<p>Your personal information is stored in a protected directory. Access is restricted to Free Web Monitoring staff.</p>
+<h4>Changes to this Privacy Policy</h4>
+<p>Free Web Monitoring may amend this policy from time to time. If significant changes are made in the way your personal information is used, we will post a prominent announcement on our site notifying 
+you of the change.</p>
+<h4>Questions or Suggestions</h4>
+<p>Questions or suggestions may be sent to: inquiry[at]freewebmonitoring.com</p>
+</div>
+
+<div class="row btm-links">
+<ul class="footer-links">
+<a href="http://www.exactseek.com/"><li>ExactSeek</li></a>
+<a href="http://www.sonicrun.com/"><li>SonicRun</li></a>
+<a href="http://www.blog-search.com/"><li>Blog-Search</li></a>
+<a href="http://www.submissionmonster.com/"><li>SubmissionMonster</li></a>
+<a href="http://www.freewebsubmission.com/"><li>FreeWebSubmission</li></a>
+<a href="http://www.sitepronews.com/"><li>SiteProNews</li></a>
+<a href="http://www.freemetataggenerator.com/"><li style="padding-right:0;">FreeMetaTagGenerator</li></a>
+</ul>
+</div>
+
+<div class="footer">
+<p class="copy">GreenWave Online Inc. © Copyright 2017, All Rights Reserved.</p>
+</div>
+
+<div class="social">
+<ul>
+<li>
+<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.freewebmonitoring.com%2F&amp;send=false&amp;layout=button_count&amp;width=51&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=arial&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:51px; height:21px; margin-right:6px;" allowtransparency="true"></iframe>
+</li>
+<li>
+<g:plusone annotation="none" href="http://www.freewebmonitoring.com/"></g:plusone>
+</li>
+</ul>
+</div>
+
+</div>
+
+</div>
 
 
 </body></html>
