southafrica.to (archived on 2017-08-14)
{
  "alexa_rank": 137177,
  "analysis_subcorpus": true,
  "categories": "business;travel",
  "char_count": 1871,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "southafrica.to",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171116101221id_/https://www.southafrica.to/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171116101221id_/http%3A//southafrica.to",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "southafrica.to",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170814163400id_/https%3A//www.southafrica.to/privacy.php",
  "policy_title": "SouthAfrica Travel Online Privacy Policy",
  "policy_url": "southafrica.to/privacy.php",
  "sha1": "12d3482f2224c73cfe99cfef524abdfafc8cd602",
  "simhash": 10759158003083607119,
  "simhash_updated": false,
  "site_hostname": "southafrica.to",
  "site_url": "http://southafrica.to",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170814163400",
  "word_count": 273,
  "year": 2017
}

--- a/s/so/sou/southafrica.to.html
+++ b/s/so/sou/southafrica.to.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the southafrica.to privacy policy that was archived on 2017-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604225459id_/https%3A//www.southafrica.to/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the southafrica.to privacy policy that was archived on 2017-08-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170814163400id_/https%3A//www.southafrica.to/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!-- InstanceBegin template="/Templates/cruises-mobile.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -75,7 +75,8 @@ googletag.enableServices();
       <header>
    
    
-   <span class="logo"><a href="http://www.southafrica.to"><img src="https://www.southafrica.to/live-content/images/logo/south-africa-travel-online-logo-new.png" alt="logo for South Africa Travel Online" title="Navigate to the homepage of South Africa Travel Online" height="77" width="270"></a></span><span class="newsflash"><a href="https://www.southafrica.to/newsletters/2017/20170602-msc-free-gift.php">Free Cruise Gift</a></span>
+   <span class="logo"><a href="http://www.southafrica.to"><img src="https://www.southafrica.to/live-content/images/logo/south-africa-travel-online-logo-new.png" alt="logo for South Africa Travel Online" title="Navigate to the homepage of South Africa Travel Online" height="77" width="270"></a></span><span class="newsflash"><a href="https://www.southafrica.to/newsletters/2017/20170811-cruises-to-Pomene.php">Pomene | Ocean View Cabin Special | From R4,810 pps*
+</a></span>
 <div id="top-widget"><span id="G-followtop"><div class="g-follow" data-annotation="bubble" data-height="24" data-href="https://plus.google.com/102349534154965104226" data-rel="publisher"></div>
 <!-- Place this tag after the last widget tag. -->
 <script type="text/javascript">
